--- a/dashboard.css
+++ b/dashboard.css
@@ -51,24 +51,34 @@ display: flex;
 .option > img{
     width: auto;
     height: 50px;
+    padding-left: 1.5em;
 }
 .dashboard{
-    width: min(40%, 300px);
+    width: clamp(300px, 40%, 400px);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2em;
     background-color: #dfeaff;
+    overflow: hidden;
 }
 .options{
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
 }
 .option{
     cursor: pointer;
-    padding-top: 1em;
+    margin-top: 1em;
     display: flex;
     align-items: center;
    font-family: 'Passion One', cursive;
    font-size: 1.5rem;
     gap: 2.5rem;
+    transition: scale 0.2s ease;
+}
+.option:hover{
+    outline: 3px solid #001b52;
+    scale: 1.1;
 }
