--- a/style.css
+++ b/style.css
@@ -17,12 +17,10 @@ main{
 .header{
     width: 100%;
     height: 60px;
-    border: 1px solid grey;
 }
 .second_row{
-    border: 1px solid grey;
     width: 100%;
-    height: 40%;
+    height: 30%;
 }
 .services{
     color: #001b52;
@@ -69,4 +67,16 @@ box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.304);
 .s_option:hover{
     scale: 1.1;
     box-shadow: -2px 2px 20px rgba(0, 0, 0, 0.24);
+}
+.second_row{
+    display: flex;
+align-items: center;
+justify-content: space-between;
+
+}
+.second_row > .card-container{
+    width: 40%;
+}
+.second_row > .balance{
+    width: 40%;
 }
