--- a/card.css
+++ b/card.css
@@ -63,7 +63,7 @@ z-index: 1000;
     height: 40px;
 }
 
-.card_numer {
+.card_number {
     display: block;
     width: 100%;
     word-spacing: 4px;
