--- a/dashboard.css
+++ b/dashboard.css
@@ -1,7 +1,7 @@
 
 
  @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&family=Passion+One&family=Secular+One&display=swap');
-
+ 
 
 *, *::before, *::after {
 box-sizing: border-box;
@@ -53,7 +53,7 @@ display: flex;
     height: 50px;
     padding-left: 1.5em;
 }
-.dashboard{
+#dashboard{
     width: clamp(300px, 40%, 400px);
     display: flex;
     flex-direction: column;
@@ -95,7 +95,7 @@ display: flex;
 
 #date{
     text-align: center;
-    width:10%;
+    width:12%;
     height:45%;
     font-size: 20px;
     font-weight: 700;
